--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>my wep page</title>
 </head>
 <body>
     <div class="container">
@@ -37,7 +37,7 @@
     </div>
     
 </body>
-<div class="footer">
-   @copyright
-</div>
+<footer>
+        <p>&copy; 2023 My Website. All rights reserved.</p>
+    </footer>
 </html>
