--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <div class="container">
      <div class="header">
         <div class="logo">
-            <img src=""alt='logo.image'>
+            <img src=""alt=''>
         </div>
         <div id="menu">
             <ul>
