--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             </ul>
         </div>
      </div>
+        <p align='center'>WELCOME TO CHESAM</p>
      <div class="content">
         <div class="content left">
 
