--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>my wep page</title>
 </head>
 <body>
@@ -13,12 +14,14 @@
             <img src=""alt=''>
         </div>
         <div id="menu">
+            <nav id='navbar'>
             <ul>
                 <li><a href="index.html">Home</a></li>
                 <li><a href="about.html">About</a></li>
                 <li><a href="services.html">Services</a></li>
                 <li><a href="contacts.html">Contacts</a></li>
             </ul>
+            </nav>
         </div>
      </div>
         <p align='center'>WELCOME TO CHESAM</p>
