--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             </nav>
         </div>
      </div>
-        <p align='center'>WELCOME TO CHESAM</p>
+        <h1 align='center'>WELCOME TO CHESAM</h1>
      <div class="content">
         <div class="content left">
 
