--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div class="container">
      <div class="header">
         <div class="logo">
-            <img src=""alt=''>
+            <img src="https://images.pexels.com/photos/709567/pexels-photo-709567.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500"alt='fruits'>
         </div>
         <div id="menu">
             <nav id='navbar'>
