--- a/home.html
+++ b/home.html
@@ -1,1 +1,21 @@
-
+<!DOCTYPE html>
+<html>
+<head>
+    <link rel="stylesheet" href="style.css">
+    <title>Home</title>
+</head>
+<body>
+   
+    <header>
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="contacts.html">Contacts</a>
+            <a href="about.html">About</a>
+            <a href="service.html">Service</a>
+        </nav>
+        <img src="Image.jpeg">
+    </header>
+    <h1>Welcome to the Home Page</h1>
+    <p>This is our website.</p>
+</body>
+</html>
