--- a/index.html
+++ b/index.html
@@ -26,13 +26,13 @@
         <h1 align='center'>WELCOME TO CHESAM</h1>
      <div class="content">
         <div class="content left">
-
+       <p>hey farmers</p>
         </div>
         <div class="main content">
-
+    <p>good farmers</p>
         </div>
         <div class="content right">
-
+    <p>thank you farmers</p>
         </div>
 
      </div>
