--- a/about.html
+++ b/about.html
@@ -14,6 +14,6 @@
         </nav>
     </header>
     <h1>About Us</h1>
-    <p>We deal with different electronic assessories.Customers make their order on which the pay some percentage and the rests are paid upon delivery. Delivery are done countrywide.</p>
+    <p>We deal with different farm products.Customers make their order on which the pay some percentage and the rests are paid upon delivery. Delivery are done countrywide.</p>
 </body>
 </html>
