--- a/services.html
+++ b/services.html
@@ -16,8 +16,8 @@
     <h1>Our Services</h1>
     <p>Here are some of the services we offered.
          <li>
-            <ul>Sell phones,laptops TVs, bulbs</ul>
-            <ul>Do software and hardware installation</ul>
+            <ul>We sell bananas raw and ripe.</ul>
+            <ul>We sell ovacados both raw and ripe</ul>
             <ul>Delivery of goods ordered by customer</ul>
          </li>
      </p>
